--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Soft Rose - نظام الإدارة المتطور</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Cairo:wght@200;400;600;700;900&display=swap" rel="stylesheet">
     <style>
+      :root {
+        --rose-main: #e11d48;
+      }
       body {
         font-family: 'Cairo', 'Almarai', sans-serif;
         transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        -webkit-tap-highlight-color: transparent;
+        overflow-x: hidden;
       }
       /* Custom Scrollbar */
-      ::-webkit-scrollbar { width: 8px; }
+      ::-webkit-scrollbar { width: 4px; height: 4px; }
       ::-webkit-scrollbar-track { background: transparent; }
-      ::-webkit-scrollbar-thumb { background: #e11d48; border-radius: 10px; }
+      ::-webkit-scrollbar-thumb { background: var(--rose-main); border-radius: 10px; }
       
       /* Glass Theme Styles */
       .theme-glass {
@@ -48,6 +53,13 @@
         border: 1px solid #059669;
         color: white;
       }
+
+      /* Mobile Table Enhancements */
+      @media (max-width: 640px) {
+        table { font-size: 0.8rem; }
+        .mobile-hide { display: none; }
+        input[type="text"], select { font-size: 0.9rem !important; }
+      }
     </style>
     <script type="importmap">
     {
@@ -61,7 +73,7 @@
     }
     </script>
   </head>
-  <body class="antialiased">
+  <body class="antialiased select-none">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
