feat: Enable text selection in attendance table
Introduces a new CSS class `.selectable-table` to allow users to select text within the attendance table. This enhances usability by enabling copy-pasting of attendance data.

Additionally, a new `handleCopyTableData` function has been implemented to facilitate copying the current attendance table content to the clipboard with user-friendly feedback. The global `select-none` class has been removed from the body to allow general text selection.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
         .mobile-hide { display: none; }
         input[type="text"], select { font-size: 0.9rem !important; }
       }
+
+      /* Allow text selection in tables even if global select is limited */
+      .selectable-table {
+        user-select: text !important;
+        -webkit-user-select: text !important;
+      }
     </style>
     <script type="importmap">
     {
@@ -73,7 +79,7 @@
     }
     </script>
   </head>
-  <body class="antialiased select-none">
+  <body class="antialiased">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
